<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="@id/amount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/amount_label" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:inputType="numberDecimal"
        android:hint="@string/amount_hint"
        android:autofillHints="name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_label" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintStart_toStartOf="@id/amount"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/send_button_text" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintStart_toEndOf="@id/send"
        app:layout_constraintEnd_toEndOf="@id/amount" />

    <TextView
        android:id="@+id/amount_validation_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/send"
        app:layout_constraintStart_toStartOf="@id/send"
        app:layout_constraintEnd_toEndOf="@id/cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>
