<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/recipient_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="@id/recipient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/recipient_label" />

    <EditText
        android:id="@+id/recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:inputType="textAutoComplete"
        android:hint="@string/recipient_hint"
        android:autofillHints="name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipient_label" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/recipient"
        app:layout_constraintStart_toStartOf="@id/recipient"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/next" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/recipient"
        app:layout_constraintStart_toEndOf="@id/next"
        app:layout_constraintEnd_toEndOf="@id/recipient" />

    <TextView
        android:id="@+id/validation_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/next"
        app:layout_constraintStart_toStartOf="@id/next"
        app:layout_constraintEnd_toEndOf="@id/cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>