<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/view_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_transactions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/send_money"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/send_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_money"
        app:layout_constraintTop_toBottomOf="@id/view_transactions"
        app:layout_constraintBottom_toTopOf="@id/view_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/view_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/send_money"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>